# Games102

./: .gitignore
homeworks/hw2/: HW2 问题记录.md
homeworks/project/Curvature/: CMakeLists.txt  glad.c  main.cpp
homeworks/project/Curve/: CMakeLists.txt  CanvasData.h  main.cpp
homeworks/project/Curve/gui/: cgal_test.cpp  glad.c
homeworks/project/Fourier/: CanvasData.h  main.cpp
homeworks/project/GAMES102_Project_hw2/: CanvasData.h  main.cpp
homeworks/project/GAMES102_Project_hw2/x64/Debug/: GAMES102_Project_hw2.exe.recipe  vc143.idb
homeworks/project/GAMES102_Project_hw2/x64/Debug/GAMES102.5278d18e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GAMES102_Project_hw2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
homeworks/project/GAMES102_Project_hw2/x64/Release/: GAMES102_Project_hw2.exe.recipe  GAMES102_Project_hw2.iobj  GAMES102_Project_hw2.ipdb
homeworks/project/GAMES102_Project_hw2/x64/Release/GAMES102.5278d18e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GAMES102_Project_hw2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
homeworks/project/GlobalHarmonic/: CMakeLists.txt  main.cpp
homeworks/project/HW2/: hw2.py  main.cpp
homeworks/project/LocalHarmonic/: CMakeLists.txt  cgal_test.cpp  main.cpp  main_.cpp  main_use_polyhedron.cpp  note.md
homeworks/project/Subdivision/: CanvasData.h  main.cpp
homeworks/project/Triangulation/: CMakeLists.txt  main.cpp  第八次作业.md
homeworks/project/Triangulation/gui/: CMakeLists.txt
homeworks/project/doc/: 第七次作业.md  第六次作业(最小曲面).md
homeworks/project/src/hw1/Components/: CanvasData.h
homeworks/project/src/hw1/Systems/: CanvasSystem.cpp
homeworks/project/src/hw3/Components/: CanvasData.h
homeworks/project/src/hw3/Components/details/: CanvasData_AutoRefl.inl
homeworks/project/src/hw3/Systems/: CanvasSystem.cpp
homeworks/project/src/hw4/: CMakeLists.txt
homeworks/project/src/hw4/Components/: CanvasData.h
homeworks/project/src/hw4/Systems/: CanvasSystem.cpp
homeworks/project/src/hw6/: CMakeLists.txt  HEMeshX.h
homeworks/project/src/hw6/Components/: DenoiseData.h
homeworks/project/src/hw6/Components/details/: DenoiseData_AutoRefl.inl
homeworks/project/src/hw6/Systems/: DenoiseSystem.cpp
